--- a/app/src/main/res/layout/fragment_forget_pwd_by_email.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd_by_email.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:clickable="true"
-    >
+    android:clickable="true">
 
     <TextView
         android:id="@+id/tv_send_email_content"
