--- a/app/src/main/res/layout/layout_item_home_page_list.xml
+++ b/app/src/main/res/layout/layout_item_home_page_list.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rLayout_device_item"
+    style="@style/ripple_background"
     android:layout_width="match_parent"
     android:layout_height="77dp"
-    android:background="?attr/selectableItemBackground"
     android:clickable="true">
 
 
