--- a/app/src/main/res/values/vpi__styles.xml
+++ b/app/src/main/res/values/vpi__styles.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2011 Jake Wharton
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2011 Jake Wharton
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,12 +14,12 @@
 -->
 
 <resources>
+
     <style name="Theme.PageIndicatorDefaults" parent="android:Theme">
         <item name="vpiIconPageIndicatorStyle">@style/Widget.IconPageIndicator</item>
     </style>
 
-    <style name="Widget">
-    </style>
+    <style name="Widget"></style>
 
 
     <style name="Widget.IconPageIndicator" parent="Widget">
