--- a/app/src/main/res/anim/slide_in_down.xml
+++ b/app/src/main/res/anim/slide_in_down.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<set
-    android:interpolator="@android:anim/accelerate_interpolator"
+<set android:interpolator="@android:anim/accelerate_interpolator"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
         android:fromYDelta="0"
