--- a/app/src/main/res/layout/activity_camera_live.xml
+++ b/app/src/main/res/layout/activity_camera_live.xml
@@ -17,7 +17,7 @@
             android:id="@+id/imgV_nav_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            style="@style/ripple_background"
             android:padding="15dp"
             android:src="@drawable/ic_nav_back_arrow" />
 
