--- a/app/src/main/res/layout/fragment_camera_live.xml
+++ b/app/src/main/res/layout/fragment_camera_live.xml
@@ -4,11 +4,57 @@
     android:layout_height="match_parent"
     tools:context="com.cylan.jiafeigou.n.view.cam.CameraLiveFragment">
 
-    <TextView
-        android:id="@+id/tv_test"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="350dp"
+        android:background="@drawable/bg_head_daytime_wonderful">
 
+        <FrameLayout
+            android:id="@+id/fLayout_live_view_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </FrameLayout>
+
+        <include layout="@layout/v_stub_progress" />
+
+        <include layout="@layout/cam_live_float_handle_bar" />
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="70dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp">
+
+        <ImageView
+            android:id="@+id/imgV_cam_switch_speaker"
+            style="@style/ripple_background"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:padding="20dp"
+            android:src="@drawable/icon_speaker_selector" />
+
+        <ImageView
+            android:id="@+id/imgV_cam_trigger_recorder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            style="@style/ripple_background"
+            android:padding="10dp"
+            android:src="@drawable/icon_record" />
+
+        <ImageView
+            android:id="@+id/imgV_cam_trigger_capture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            style="@style/ripple_background"
+            android:padding="20dp"
+            android:src="@drawable/icon_capture_selector" />
+    </FrameLayout>
 </FrameLayout>
