--- a/app/src/main/res/layout/fragment_config_ap.xml
+++ b/app/src/main/res/layout/fragment_config_ap.xml
@@ -25,7 +25,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="55dp"
-        android:background="?attr/selectableItemBackground"
+        style="@style/ripple_background"
         android:drawableRight="@drawable/icon_date_downtag_wonderful"
         android:gravity="center"
         android:text="xxxxxx"
