--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
  Copyright (C) 2008 ZXing authors
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,15 +15,15 @@
 -->
 <resources>
 
-    <item name="auto_focus" type="id"/>
-    <item name="decode" type="id"/>
-    <item name="decode_failed" type="id"/>
-    <item name="decode_succeeded" type="id"/>
-    <item name="launch_product_query" type="id"/>
-    <item name="quit" type="id"/>
-    <item name="restart_preview" type="id"/>
-    <item name="return_scan_result" type="id"/>
-    
-    <item name="selected_view" type="id"/>
+    <item name="auto_focus" type="id" />
+    <item name="decode" type="id" />
+    <item name="decode_failed" type="id" />
+    <item name="decode_succeeded" type="id" />
+    <item name="launch_product_query" type="id" />
+    <item name="quit" type="id" />
+    <item name="restart_preview" type="id" />
+    <item name="return_scan_result" type="id" />
+
+    <item name="selected_view" type="id" />
 
 </resources>
