--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -15,7 +15,9 @@
     </style>
 
     <style name="ripple_background">
-        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        <!--<item name="android:background">?attr/selectableItemBackgroundBorderless</item>-->
+        <item name="android:background">?attr/selectableItemBackground</item>
     </style>
 
+    <style name="CamActivityTheme" parent="AppTheme" />
 </resources>
