--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -131,4 +131,7 @@
     <style name="ripple_background">
         <item name="android:background">@null</item>
     </style>
+
+
+    <style name="CamActivityTheme" parent="AppTheme" />
 </resources>
