--- a/app/src/main/res/layout/fragment_camera_live.xml
+++ b/app/src/main/res/layout/fragment_camera_live.xml
@@ -14,9 +14,7 @@
         <FrameLayout
             android:id="@+id/fLayout_live_view_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </FrameLayout>
+            android:layout_height="match_parent" />
 
         <include layout="@layout/v_stub_progress" />
 
