--- a/app/src/main/res/layout/activity_camera_live.xml
+++ b/app/src/main/res/layout/activity_camera_live.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.n.view.activity.CameraLiveActivity">
 
+
+    <FrameLayout
+        android:id="@+id/fLayout_information_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
     <RelativeLayout
         android:id="@+id/rLayout_camera_live_top_bar"
         android:layout_width="match_parent"
@@ -37,8 +42,10 @@
             android:src="@drawable/icon_setting" />
     </RelativeLayout>
 
+    </FrameLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_camera_live"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </LinearLayout>
