--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -136,4 +136,12 @@
         <!--背景透明-->
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
+
+    <!-- 设备信息item样式 -->
+    <style name="information_item">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginRight">16dp</item>
+    </style>
 </resources>
