设备信息，设备名称的细节完善

--- a/app/src/main/res/layout/fragment_edit_name.xml
+++ b/app/src/main/res/layout/fragment_edit_name.xml
@@ -16,18 +16,28 @@
 
     <EditText
         android:id="@+id/et_information_edit_name"
-        style="@style/AppTheme"
+        android:text="客厅摄像头"
+        android:textColor="#666"
         android:layout_marginBottom="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="52dp"
         android:layout_width="232dp"
         android:layout_height="wrap_content"
-        android:hint="请输入设备名称"
-        android:textColorHint="#cecece"
         android:textSize="14sp"
-        android:textColor="#666"
         android:maxLength="12"/>
+    <TextView
+        android:visibility="invisible"
+        android:id="@+id/tv_information_show_state"
+        android:layout_marginTop="37dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="名称已存在"
+        android:textSize="10sp"
+        android:textColor="#F26B6B"
+        android:layout_alignTop="@+id/et_information_edit_name"
+        android:layout_alignLeft="@+id/tv_information_name"
+        android:layout_alignStart="@+id/tv_information_name"/>
 
     <LinearLayout
         android:layout_marginLeft="141dp"
