--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -144,4 +144,13 @@
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginRight">16dp</item>
     </style>
+
+    <style name="AppThemeEditText" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorAccent">#4B9FD5</item>
+        <!-- AppCompatEditText默认状态状态设置底线颜色 -->
+        <item name="colorControlNormal">#4B9FD5</item>
+        <!-- AppCompatEditText选择的底线颜色 -->
+        <item name="colorControlActivated">#4B9FD5</item>
+
+    </style>
 </resources>
