--- a/app/src/main/res/layout/fragment_edit_timezone.xml
+++ b/app/src/main/res/layout/fragment_edit_timezone.xml
@@ -51,21 +51,8 @@
             android:src="@drawable/icon_search"/>
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/color_white">
-        <TextView
-            android:id="@+id/tv_information_timezone_noresult"
-            android:visibility="invisible"
-            android:layout_marginTop="90dp"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="无结果"
-            android:textSize="15sp"
-            android:textColor="#666666"/>
         <ListView
+            android:background="@color/color_white"
             android:visibility="visible"
             android:focusable="true"
             android:clickable="true"
@@ -75,6 +62,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </ListView>
-    </RelativeLayout>
 
+
+    <RelativeLayout
+        android:id="@+id/tv_information_timezone_noresult"
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_white">
+        <TextView
+            android:layout_marginTop="90dp"
+            android:layout_centerHorizontal="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="无结果"
+            android:textSize="15sp"
+            android:textColor="#666666"/>
+    </RelativeLayout>
 </LinearLayout>
