--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,6 +49,7 @@
     <color name="color_909090">#909090</color>
     <color name="color_666666">#666666</color>
     <color name="color_383838">#383838</color>
+    <color name="color_979797">#979797</color>
 
 
     <!--纯色-->
