--- a/app/src/main/res/layout/fragment_camera_live.xml
+++ b/app/src/main/res/layout/fragment_camera_live.xml
@@ -26,9 +26,12 @@
         android:id="@+id/fLayout_cam_live_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="bottom"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp">
+        android:layout_gravity="bottom">
+
+        <com.cylan.jiafeigou.n.view.cam.CamLivePortWheel
+            android:id="@+id/sw_cam_port_wheel"
+            android:layout_width="match_parent"
+            android:layout_height="52dp" />
 
         <ImageView
             android:id="@+id/imgV_cam_switch_speaker"
@@ -36,6 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:padding="20dp"
             android:src="@drawable/icon_speaker_selector" />
 
@@ -53,6 +58,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:padding="20dp"
             android:src="@drawable/icon_capture_selector" />
