--- a/app/src/main/res/layout/fragment_camera_live_land_top_layer.xml
+++ b/app/src/main/res/layout/fragment_camera_live_land_top_layer.xml
@@ -7,89 +7,59 @@
     android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.n.view.cam.CameraLiveFragment">
 
-    <FrameLayout
+    <com.cylan.jiafeigou.n.view.cam.CamLiveLandTopBar
         android:id="@+id/fLayout_cam_live_land_top_bar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="#4C000000">
-
-        <TextView
-            android:id="@+id/imgV_cam_live_land_nav_back"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:drawableLeft="@drawable/ic_nav_back_arrow"
-            android:drawablePadding="15dp"
-            android:padding="15dp"
-            android:textColor="@color/color_white"
-            android:textSize="15sp" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imgV_cam_switch_speaker"
-                style="@style/ripple_background"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:paddingLeft="18dp"
-                android:paddingRight="18dp"
-                android:src="@drawable/icon_speaker_pressed" />
-
-            <ImageView
-                android:id="@+id/imgV_cam_trigger_recorder"
-                style="@style/ripple_background"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:paddingLeft="18dp"
-                android:paddingRight="18dp"
-                android:src="@drawable/icon_recorder_pressed" />
-
-            <ImageView
-                android:id="@+id/imgV_cam_trigger_capture"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="end|center_vertical"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:paddingLeft="18dp"
-                android:paddingRight="18dp"
-                android:src="@drawable/icon_capture_pressed" />
-        </LinearLayout>
-    </FrameLayout>
+        android:background="#4C000000" />
 
     <RelativeLayout
         android:id="@+id/rLayout_cam_live_land_bottom_bar"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom"
-        android:background="#4C000000">
+        android:layout_height="78dp"
+        android:layout_gravity="bottom">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="30dp"
+            android:background="@color/color_4C000000">
+
+        </View>
 
         <ImageView
             android:id="@+id/imgV_cam_live_land_play"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="30dp"
             android:paddingLeft="38dp"
             android:paddingRight="38dp"
             android:src="@drawable/icon_landscape_play" />
 
+        <com.cylan.jiafeigou.n.view.cam.CamLiveLandWheel
+            android:id="@+id/cv_cam_land_live_wheel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@+id/lLayout_cam_live_land_bottom_"
+            android:layout_toRightOf="@+id/imgV_cam_live_land_play" />
+
 
         <LinearLayout
+            android:id="@+id/lLayout_cam_live_land_bottom_"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentRight="true">
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="30dp">
 
             <View
-                android:layout_width="2dp"
+                android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_adadad"
                 android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp" />
+                android:layout_marginTop="5dp"
+                android:background="@color/color_adadad" />
 
             <TextView
                 android:id="@+id/tv_cam_live_land_play_state"
@@ -104,7 +74,7 @@
                 android:textSize="14sp" />
 
             <View
-                android:layout_width="1dp"
+                android:layout_width="2dp"
                 android:layout_height="match_parent"
                 android:background="@color/color_adadad" />
 
