--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,6 +50,7 @@
     <color name="color_666666">#666666</color>
     <color name="color_383838">#383838</color>
     <color name="color_979797">#979797</color>
+    <color name="color_4C000000">#4C000000</color>
 
 
     <!--纯色-->
