historyData timeSet 整合

--- a/app/src/main/res/layout/layout_cam_land_live_wheel.xml
+++ b/app/src/main/res/layout/layout_cam_land_live_wheel.xml
@@ -26,6 +26,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="bottom"
         android:layout_marginTop="30dp"
-        hunt:sw_markerColor="@color/color_4b9fd5" />
+        hunt:sw_markerColor="@color/color_36BDFF" />
 
 </merge>
