--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,6 +42,7 @@
     <color name="color_0ba8cf">#0BA8CF</color>
     <color name="color_f6f9fa">#F6F9FA</color>
     <color name="color_f4f4f4">#F4F4F4</color>
+    <color name="color_36BDFF">#36BDFF</color>
 
 
     <color name="color_888888">#888888</color>
