--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
     <color name="color_353c41">#353C41</color>
     <color name="color_929292">#929292</color>
     <color name="color_36bdff">#36BDFF</color>
+    <color name="color_c5e6fc">#C5E6FC</color>
 
     <color name="color_d2d2d2">#D2D2D2</color>
     <color name="color_dde0e5">#DDE0E5</color>
