--- a/app/src/main/res/layout/activity_camera_live.xml
+++ b/app/src/main/res/layout/activity_camera_live.xml
@@ -8,44 +8,44 @@
     tools:context="com.cylan.jiafeigou.n.view.activity.CameraLiveActivity">
 
 
-    <FrameLayout
-        android:id="@+id/fLayout_information_message"
+    <!--<FrameLayout-->
+    <!--android:id="@+id/fLayout_information_message"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content">-->
+
+    <RelativeLayout
+        android:id="@+id/rLayout_camera_live_top_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/color_0ba8cf">
 
-        <RelativeLayout
-            android:id="@+id/rLayout_camera_live_top_bar"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/imgV_nav_back"
+            style="@style/ripple_background"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/color_0ba8cf">
+            android:padding="15dp"
+            android:src="@drawable/ic_nav_back_arrow" />
 
-            <ImageView
-                android:id="@+id/imgV_nav_back"
-                style="@style/ripple_background"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:src="@drawable/ic_nav_back_arrow" />
+        <com.cylan.jiafeigou.widget.indicator.PagerSlidingTabStrip
+            android:id="@+id/v_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_toRightOf="@+id/imgV_nav_back"
+            app:pstsTabPaddingLeftRight="14dip" />
 
-            <com.cylan.jiafeigou.widget.indicator.PagerSlidingTabStrip
-                android:id="@+id/v_indicator"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_toRightOf="@+id/imgV_nav_back"
-                app:pstsTabPaddingLeftRight="14dip" />
+        <ImageView
+            android:id="@+id/imgV_camera_title_top_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:padding="14dp"
+            android:src="@drawable/icon_setting" />
+    </RelativeLayout>
 
-            <ImageView
-                android:id="@+id/imgV_camera_title_top_setting"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:padding="14dp"
-                android:src="@drawable/icon_setting" />
-        </RelativeLayout>
+    <!--</FrameLayout>-->
 
-    </FrameLayout>
-
-    <android.support.v4.view.ViewPager
+    <com.cylan.jiafeigou.widget.CustomViewPager
         android:id="@+id/vp_camera_live"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
