--- a/app/src/main/res/layout/fragment_wonderful_big_pic.xml
+++ b/app/src/main/res/layout/fragment_wonderful_big_pic.xml
@@ -2,10 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_white"
+    android:clickable="true"
     tools:context="com.cylan.jiafeigou.n.view.media.WonderfulBigPicFragment">
 
-    <com.cylan.photoview.PhotoView
+    <ImageView
         android:id="@+id/imgV_show_pic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="240dp"
+        android:layout_height="240dp"
+        android:layout_gravity="center"
+        android:scaleType="centerCrop"
+        android:transitionName="picDetailsFragment"
+        tools:ignore="ContentDescription,UnusedAttribute" />
 </FrameLayout>
