--- a/app/src/main/res/layout/layout_item_vedio_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_vedio_wonderful.xml
@@ -41,6 +41,7 @@
             android:textSize="13sp" />
 
         <ImageView
+            android:transitionName="picDetailsFragment"
             android:id="@+id/iv_wonderful_item_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
