--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -106,4 +106,9 @@
         <attr name="progress_stroke_color" format="reference|color" />
         <attr name="progress_point_radius" format="dimension" />
     </declare-styleable>
+    <declare-styleable name="SettingItemViewStyle">
+        <attr name="sv_title" format="string|reference" />
+        <attr name="sv_sub_title" format="string|reference" />
+        <attr name="sv_image_src" format="reference" />
+    </declare-styleable>
 </resources>
